{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "766c90e8-9086-4773-aa3d-168cb204b8eb",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ba83cfdc-fa8e-4f97-95f7-d45facc4a1fc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "3ddd8a50-799a-4a6f-874f-d5d39e457169",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7346d967-72e1-40c1-a092-e6d2b07c3c27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Perspective",
                    "type": "Value",
                    "id": "7704d6cf-61fc-4d04-9c5e-8b55f1733cbd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ad8cde2b-f61a-4128-80ab-97afe0d8ce64",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7d3cd0c3-16d1-4cb6-be1b-3898d8736e65",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "34bd3144-bc50-452e-8c51-cddb82fb100f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "88cd48e6-c140-4828-9e85-781fb8dfe9c7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "503b75b7-c236-4723-b540-b9c6f4b4fe83",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d43f02c1-7b7e-4c3f-934c-bb21d22aadf7",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dde89b0-1ab3-43a6-afe9-0d196cf8f43d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17aca718-e600-460e-8109-23835f46ebf5",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "",
                    "action": "Perspective",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}